docs/v8.4/packages_api/ui/selectcommonprops.md
+++
# -----------------------------------------------------------------------
# Do not edit this file. It is automatically generated by API Documenter.
# -----------------------------------------------------------------------
title = "SelectCommonProps"
keywords = ["grafana","documentation","sdk","@grafana/ui"]
type = "docs"
disable_edit_link = true
+++

## SelectCommonProps interface

<b>Signature</b>

```typescript
export interface SelectCommonProps<T> 
```
<b>Import</b>

```typescript
import { SelectCommonProps } from '@grafana/ui';
```
<b>Properties</b>

|  Property | Type | Description |
|  --- | --- | --- |
|  ["aria-label"](#_aria-label_-property) | <code>string</code> | Aria label applied to the input field |
|  [allowCreateWhileLoading](#allowcreatewhileloading-property) | <code>boolean</code> |  |
|  [allowCustomValue](#allowcustomvalue-property) | <code>boolean</code> |  |
|  [autoFocus](#autofocus-property) | <code>boolean</code> | Focus is set to the Select when rendered |
|  [backspaceRemovesValue](#backspaceremovesvalue-property) | <code>boolean</code> |  |
|  [className](#classname-property) | <code>string</code> |  |
|  [closeMenuOnSelect](#closemenuonselect-property) | <code>boolean</code> |  |
|  [components](#components-property) | <code>any</code> | Used for custom components. For more information, see <code>react-select</code> |
|  [defaultValue](#defaultvalue-property) | <code>any</code> |  |
|  [disabled](#disabled-property) | <code>boolean</code> |  |
|  [filterOption](#filteroption-property) | <code>(option: SelectableValue&lt;T&gt;, searchQuery: string) =&gt; boolean</code> |  |
|  [formatCreateLabel](#formatcreatelabel-property) | <code>(input: string) =&gt; string</code> | Function for formatting the text that is displayed when creating a new value |
|  [getOptionLabel](#getoptionlabel-property) | <code>(item: SelectableValue&lt;T&gt;) =&gt; React.ReactNode</code> |  |
|  [getOptionValue](#getoptionvalue-property) | <code>(item: SelectableValue&lt;T&gt;) =&gt; string</code> |  |
|  [id](#id-property) | <code>string</code> | The id to set on the SelectContainer component. To set the id for a label (with htmlFor), |
|  [inputId](#inputid-property) | <code>string</code> | The id of the search input. Use this to set a matching label with htmlFor |
|  [inputValue](#inputvalue-property) | <code>string</code> |  |
|  [invalid](#invalid-property) | <code>boolean</code> |  |
|  [isClearable](#isclearable-property) | <code>boolean</code> |  |
|  [isLoading](#isloading-property) | <code>boolean</code> |  |
|  [isMulti](#ismulti-property) | <code>boolean</code> |  |
|  [isOpen](#isopen-property) | <code>boolean</code> |  |
|  [isOptionDisabled](#isoptiondisabled-property) | <code>() =&gt; boolean</code> |  |
|  [isSearchable](#issearchable-property) | <code>boolean</code> | Disables the possibility to type into the input |
|  [isValidNewOption](#isvalidnewoption-property) | <code>(inputValue: string, value: SelectableValue&lt;T&gt; &#124; null, options: OptionsOrGroups&lt;unknown, GroupBase&lt;unknown&gt;&gt;) =&gt; boolean</code> | allowCustomValue must be enabled. Determines whether the "create new" option should be displayed based on the current input value, select value and options array. |
|  [loadingMessage](#loadingmessage-property) | <code>string</code> | Message to display isLoading=true |
|  [maxMenuHeight](#maxmenuheight-property) | <code>number</code> |  |
|  [maxVisibleValues](#maxvisiblevalues-property) | <code>number</code> |  |
|  [menuPlacement](#menuplacement-property) | <code>'auto' &#124; 'bottom' &#124; 'top'</code> |  |
|  [menuPosition](#menuposition-property) | <code>'fixed' &#124; 'absolute'</code> |  |
|  [menuShouldPortal](#menushouldportal-property) | <code>boolean</code> | Setting to true will portal the menu to <code>document.body</code>. This property will soon default to true and portalling will be the default behavior. |
|  [minMenuHeight](#minmenuheight-property) | <code>number</code> |  |
|  [noOptionsMessage](#nooptionsmessage-property) | <code>string</code> | The message to display when no options could be found |
|  [onBlur](#onblur-property) | <code>() =&gt; void</code> |  |
|  [onChange](#onchange-property) | <code>(value: SelectableValue&lt;T&gt;, actionMeta: ActionMeta) =&gt; {} &#124; void</code> |  |
|  [onCloseMenu](#onclosemenu-property) | <code>() =&gt; void</code> |  |
|  [onCreateOption](#oncreateoption-property) | <code>(value: string) =&gt; void</code> | allowCustomValue must be enabled. Function decides what to do with that custom value. |
|  [onInputChange](#oninputchange-property) | <code>(value: string, actionMeta: InputActionMeta) =&gt; void</code> |  |
|  [onKeyDown](#onkeydown-property) | <code>(event: React.KeyboardEvent) =&gt; void</code> |  |
|  [onOpenMenu](#onopenmenu-property) | <code>() =&gt; void</code> |  |
|  [openMenuOnFocus](#openmenuonfocus-property) | <code>boolean</code> |  |
|  [options](#options-property) | <code>Array&lt;SelectableValue&lt;T&gt;&gt;</code> |  |
|  [placeholder](#placeholder-property) | <code>string</code> |  |
|  [prefix](#prefix-property) | <code>JSX.Element &#124; string &#124; null</code> | item to be rendered in front of the input |
|  [renderControl](#rendercontrol-property) | <code>ControlComponent&lt;T&gt;</code> | Use a custom element to control Select. A proper ref to the renderControl is needed if 'portal' isn't set to null |
|  [showAllSelectedWhenOpen](#showallselectedwhenopen-property) | <code>boolean</code> |  |
|  [tabSelectsValue](#tabselectsvalue-property) | <code>boolean</code> |  |
|  [value](#value-property) | <code>SelectValue&lt;T&gt; &#124; null</code> |  |
|  [width](#width-property) | <code>number &#124; 'auto'</code> | Sets the width to a multiple of 8px. Should only be used with inline forms. Setting width of the container is preferred in other cases. |

### "aria-label" property

Aria label applied to the input field

<b>Signature</b>

```typescript
['aria-label']?: string;
```

### allowCreateWhileLoading property

<b>Signature</b>

```typescript
allowCreateWhileLoading?: boolean;
```

### allowCustomValue property

<b>Signature</b>

```typescript
allowCustomValue?: boolean;
```

### autoFocus property

Focus is set to the Select when rendered

<b>Signature</b>

```typescript
autoFocus?: boolean;
```

### backspaceRemovesValue property

<b>Signature</b>

```typescript
backspaceRemovesValue?: boolean;
```

### className property

<b>Signature</b>

```typescript
className?: string;
```

### closeMenuOnSelect property

<b>Signature</b>

```typescript
closeMenuOnSelect?: boolean;
```

### components property

Used for custom components. For more information, see `react-select`

<b>Signature</b>

```typescript
components?: any;
```

### defaultValue property

<b>Signature</b>

```typescript
defaultValue?: any;
```

### disabled property

<b>Signature</b>

```typescript
disabled?: boolean;
```

### filterOption property

<b>Signature</b>

```typescript
filterOption?: (option: SelectableValue<T>, searchQuery: string) => boolean;
```

### formatCreateLabel property

Function for formatting the text that is displayed when creating a new value

<b>Signature</b>

```typescript
formatCreateLabel?: (input: string) => string;
```

### getOptionLabel property

<b>Signature</b>

```typescript
getOptionLabel?: (item: SelectableValue<T>) => React.ReactNode;
```

### getOptionValue property

<b>Signature</b>

```typescript
getOptionValue?: (item: SelectableValue<T>) => string;
```

### id property

The id to set on the SelectContainer component. To set the id for a label (with htmlFor),

<b>Signature</b>

```typescript
id?: string;
```

### inputId property

The id of the search input. Use this to set a matching label with htmlFor

<b>Signature</b>

```typescript
inputId?: string;
```

### inputValue property

<b>Signature</b>

```typescript
inputValue?: string;
```

### invalid property

<b>Signature</b>

```typescript
invalid?: boolean;
```

### isClearable property

<b>Signature</b>

```typescript
isClearable?: boolean;
```

### isLoading property

<b>Signature</b>

```typescript
isLoading?: boolean;
```

### isMulti property

<b>Signature</b>

```typescript
isMulti?: boolean;
```

### isOpen property

<b>Signature</b>

```typescript
isOpen?: boolean;
```

### isOptionDisabled property

<b>Signature</b>

```typescript
isOptionDisabled?: () => boolean;
```

### isSearchable property

Disables the possibility to type into the input

<b>Signature</b>

```typescript
isSearchable?: boolean;
```

### isValidNewOption property

allowCustomValue must be enabled. Determines whether the "create new" option should be displayed based on the current input value, select value and options array.

<b>Signature</b>

```typescript
isValidNewOption?: (inputValue: string, value: SelectableValue<T> | null, options: OptionsOrGroups<unknown, GroupBase<unknown>>) => boolean;
```

### loadingMessage property

Message to display isLoading=true

<b>Signature</b>

```typescript
loadingMessage?: string;
```

### maxMenuHeight property

<b>Signature</b>

```typescript
maxMenuHeight?: number;
```

### maxVisibleValues property

<b>Signature</b>

```typescript
maxVisibleValues?: number;
```

### menuPlacement property

<b>Signature</b>

```typescript
menuPlacement?: 'auto' | 'bottom' | 'top';
```

### menuPosition property

<b>Signature</b>

```typescript
menuPosition?: 'fixed' | 'absolute';
```

### menuShouldPortal property

Setting to true will portal the menu to `document.body`<!-- -->. This property will soon default to true and portalling will be the default behavior.

<b>Signature</b>

```typescript
menuShouldPortal?: boolean;
```

### minMenuHeight property

<b>Signature</b>

```typescript
minMenuHeight?: number;
```

### noOptionsMessage property

The message to display when no options could be found

<b>Signature</b>

```typescript
noOptionsMessage?: string;
```

### onBlur property

<b>Signature</b>

```typescript
onBlur?: () => void;
```

### onChange property

<b>Signature</b>

```typescript
onChange: (value: SelectableValue<T>, actionMeta: ActionMeta) => {} | void;
```

### onCloseMenu property

<b>Signature</b>

```typescript
onCloseMenu?: () => void;
```

### onCreateOption property

allowCustomValue must be enabled. Function decides what to do with that custom value.

<b>Signature</b>

```typescript
onCreateOption?: (value: string) => void;
```

### onInputChange property

<b>Signature</b>

```typescript
onInputChange?: (value: string, actionMeta: InputActionMeta) => void;
```

### onKeyDown property

<b>Signature</b>

```typescript
onKeyDown?: (event: React.KeyboardEvent) => void;
```

### onOpenMenu property

<b>Signature</b>

```typescript
onOpenMenu?: () => void;
```

### openMenuOnFocus property

<b>Signature</b>

```typescript
openMenuOnFocus?: boolean;
```

### options property

<b>Signature</b>

```typescript
options?: Array<SelectableValue<T>>;
```

### placeholder property

<b>Signature</b>

```typescript
placeholder?: string;
```

### prefix property

item to be rendered in front of the input

<b>Signature</b>

```typescript
prefix?: JSX.Element | string | null;
```

### renderControl property

Use a custom element to control Select. A proper ref to the renderControl is needed if 'portal' isn't set to null

<b>Signature</b>

```typescript
renderControl?: ControlComponent<T>;
```

### showAllSelectedWhenOpen property

<b>Signature</b>

```typescript
showAllSelectedWhenOpen?: boolean;
```

### tabSelectsValue property

<b>Signature</b>

```typescript
tabSelectsValue?: boolean;
```

### value property

<b>Signature</b>

```typescript
value?: SelectValue<T> | null;
```

### width property

Sets the width to a multiple of 8px. Should only be used with inline forms. Setting width of the container is preferred in other cases.

<b>Signature</b>

```typescript
width?: number | 'auto';
```
